--- a/style.css
+++ b/style.css
@@ -63,12 +63,6 @@ section {
   justify-content: space-between;
   align-items: flex-start;
   gap: 20px;
-  height: 200px;
-  /* background: rgba(32, 31, 32, 0.9);
-  backdrop-filter: blur(10px);
-  border-radius: 30px; */
-
-  z-index: 2;
 }
 
 .list-wrapper {
@@ -76,12 +70,6 @@ section {
   flex-direction: column;
   align-items: center;
   gap: 30px;
-}
-
-.form-1,
-.form-2 {
-  display: flex;
-  gap: 10px;
 }
 
 .input-1,
@@ -131,6 +119,7 @@ section {
 .title-1,
 .title-2 {
   font-family: 'Rubik Vinyl', cursive;
+  word-spacing: 5px;
   color: rgb(255, 255, 255);
   font-size: 25px;
 }
@@ -163,9 +152,16 @@ li {
   justify-content: space-between;
 }
 
+.value-text-1,
+.value-text-2 {
+  width: 230px;
+  overflow: hidden;
+}
+
 .remove-1,
 .remove-2 {
   width: 70px;
+  height: 30px;
   color: white;
   background: rgb(255, 0, 0);
   border-radius: 5px;
@@ -185,6 +181,7 @@ li {
   align-self: center;
   font-family: 'Rubik Vinyl', cursive;
   font-size: 30px;
+  word-spacing: 5px;
   color: rgb(255, 0, 0);
 }
 
@@ -209,6 +206,7 @@ li {
   display: flex;
   justify-content: center;
 }
+
 /* ---------------------- Keyframe ---------------------- */
 
 @keyframes glowing {
@@ -220,5 +218,52 @@ li {
   }
   100% {
     background-position: 0 0;
+  }
+}
+
+/* ---------------------- Responsive ---------------------- */
+
+@media (max-width: 320px), (max-width: 650px) {
+  header {
+    height: 60px;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  main {
+    padding: 20px 20px;
+  }
+
+  section {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .title-1,
+  .title-2 {
+    font-family: 'Rubik Vinyl', cursive;
+    word-spacing: 5px;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+  }
+
+  .similar {
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    width: 350px;
+  }
+
+  .similar-text {
+    font-size: 20px;
+  }
+
+  .list-similar {
+    margin-top: 20px;
   }
 }
