--- a/style.css
+++ b/style.css
@@ -72,13 +72,19 @@ section {
   gap: 30px;
 }
 
+.form-1,
+.form-2 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .input-1,
 .input-2 {
   width: 250px;
   height: 35px;
   border: 2px solid rgb(255, 255, 255);
   border-radius: 7px;
-
   padding: 10px;
   background: none;
   outline: none;
@@ -130,7 +136,7 @@ section {
   flex-direction: column;
   gap: 10px;
   min-height: 250px;
-  width: 350px;
+  width: 360px;
   background: rgba(20, 20, 20, 0.5);
   border-radius: 10px;
   padding: 15px;
